🏗 setup datalevin, create make-record interceptor